--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,8 +1,12 @@
-FROM maven:3.8.3-openjdk-17
-COPY . /opt/
-WORKDIR /opt
-RUN mvn clean package 
-WORKDIR target/
+# Build stage
+FROM maven:3.8.3-openjdk-17 AS build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
+# Run stage
+FROM openjdk:17-jdk-slim
+WORKDIR /app
+COPY --from=build /app/target/student-registration-backend-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar"]
-CMD ["student-registration-backend-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
